--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "next": "15.3.2",
     "personal-financial": "file:",
     "react": "^19.0.0",
